prod_snapshot_2015-09-24_1030/objects/KPICalender__c.object
<CustomObject>
    <fields>
        <fullName>Code_Day_Of_Week__c</fullName>
        <formula>MOD( Date__c  - DATE(2000,1,2),7)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code Day Of Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Code_Period__c</fullName>
        <description>Offset of the period for this KPI Calendar, from the Current period. Positive if this instance is in the future, negative if it&apos;s in the past.</description>
        <formula>Period_Offset__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Code_Week__c</fullName>
        <formula>(( 
(TODAY() + CASE(MOD(TODAY() - DATE(1900, 1, 7), 7), 
0, 6, 
1, 5, 
2, 4, 
3, 3, 
4, 2, 
5, 1, 
6, 0, 0)) 


- ( Date__c  + CASE(MOD(TODAY() - DATE(1900, 1, 7), 7), 
0, 6, 
1, 5, 
2, 4, 
3, 3, 
4, 2, 
5, 1, 
6, 0, 0)) 
)/7)*(-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrentPeriod2__c</fullName>
        <description>This is the Current Period updated by an Apex scheduled job. the Field CurrentPeriod, will point to this one</description>
        <label>CurrentPeriod2</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentPeriod__c</fullName>
        <formula>CurrentPeriod2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CurrentPeriod</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fiscal_Week__c</fullName>
        <label>Fiscal Week</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsToday__c</fullName>
        <formula>IF(TODAY() = Date__c,&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsToday</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period_Offset__c</fullName>
        <description>This will be the offset of the current period versus this instance of the KPICalender Period. Negative means current is later than KPI, Positive means Current is Earlier than KPI.

This wil replace the logid in code period. Code period will then just point to this field.</description>
        <label>Period Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <picklist>
            <picklistValues>
                <fullName>P01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>YearPeriod__c</fullName>
        <formula>TEXT( Fiscal_Year__c ) &amp; TEXT(Period__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YearPeriod</label>
        <type>Text</type>
    </fields>
    <label>KPI Calender</label>
    <listViews>
        <fullName>All2012</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Fiscal_Week__c</columns>
        <columns>Fiscal_Year__c</columns>
        <columns>Period__c</columns>
        <columns>Code_Period__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Fiscal_Year__c</field>
            <operation>equals</operation>
            <value>2012</value>
        </filters>
        <label>All 2012</label>
    </listViews>
    <listViews>
        <fullName>All2013</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Fiscal_Week__c</columns>
        <columns>Fiscal_Year__c</columns>
        <columns>Period__c</columns>
        <columns>Code_Period__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Fiscal_Year__c</field>
            <operation>equals</operation>
            <value>2013</value>
        </filters>
        <label>All 2013</label>
    </listViews>
    <listViews>
        <fullName>All2014</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Fiscal_Week__c</columns>
        <columns>Fiscal_Year__c</columns>
        <columns>Period__c</columns>
        <columns>Code_Period__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Fiscal_Year__c</field>
            <operation>equals</operation>
            <value>2014</value>
        </filters>
        <label>All 2014</label>
    </listViews>
    <listViews>
        <fullName>All_Dates</fullName>
        <columns>NAME</columns>
        <columns>Period__c</columns>
        <columns>YearPeriod__c</columns>
        <columns>Fiscal_Week__c</columns>
        <columns>Fiscal_Year__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Dates</label>
    </listViews>
    <nameField>
        <label>Date</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KPIs Calender</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>